Channel restricted commands

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "guild_id": 1120012114321494088
   },
 
-  "aeroPermissions": {
+  "permissions": {
     "ambassador": 1175138965054042212,
     "director": 1180831972440944750,
     "manager": 1197132105147232266,
@@ -14,14 +14,11 @@
     "verified": 1120128265668022292
   },
 
-  "permissions":{
-    "ambassador": 1450810523200524290,
-    "director": 1450810523200524290,
-    "manager": 1450810523200524290,
-    "atc_staff": 1450810523200524290,
-    "event_host": 1450810523200524290,
-    "controller": 1450810523200524290,
-    "verified": 1450810523200524290
+  "channels":{
+    "atis": 1190409028690530385,
+    "debug": 1411111044700438640,
+    "bot_commands": 1168198879536234546,
+    "staff_bot_commands": 1120053541776674826
   },
 
   "logging": {
